Move to bower managed bootstrap and fontawesome