@@ -10,12 +10,17 @@ defaultTasks 'preview'
 ext {
     mainClassName = [project.group, 'Main'].join('.')
     compatibilityVersion = JavaVersion.VERSION_1_7
+    bowerComponentsDir = 'bower_components'
 }
 
 sourceCompatibility = compatibilityVersion
 targetCompatibility = compatibilityVersion
 
-clean.doLast { ant.delete(dir: '.cache'); ant.delete(dir: 'target') }
+clean.delete << file('.cache')
+clean.delete << file('target')
+clean.delete << file('theme/fonts/vendor')
+clean.delete << file('theme/javascripts/vendor')
+clean.delete << file('theme/sass/vendor')
 
 buildscript {
     project.ext {
@@ -94,4 +99,59 @@ task preview(type: JavaExec) {
     classpath sourceSets.main.runtimeClasspath
     main = mainClassName
     args name
+    jvmArgs "-Xmx1024M", "-XX:MaxPermSize=512M"
 }
+
+task copyBootstrap {
+    inputs.file 'bower.json'
+    inputs.dir 'bower_components/bootstrap'
+    inputs.dir 'bower_components/bootstrap-sass-official'
+
+    outputs.dir 'theme/fonts/vendor/bootstrap'
+    outputs.dir 'theme/javascripts/vendor/jquery'
+    outputs.dir 'theme/javascripts/vendor/bootstrap'
+    outputs.dir 'theme/sass/vendor/bootstrap'
+
+    doLast {
+        copy {
+            from "${bowerComponentsDir}/bootstrap-sass-official/assets/fonts"
+            into 'theme/fonts/vendor'
+        }
+        copy {
+            from "${bowerComponentsDir}/jquery/dist"
+            into 'theme/javascripts/vendor/jquery'
+        }
+        copy {
+            from "${bowerComponentsDir}/bootstrap/dist/js"
+            into 'theme/javascripts/vendor/bootstrap'
+        }
+        copy {
+            from "${bowerComponentsDir}/bootstrap-sass-official/assets/stylesheets"
+            into 'theme/sass/vendor/bootstrap'
+        }
+    }
+}
+
+task copyFontawesome {
+    inputs.file 'bower.json'
+    inputs.dir 'bower_components/fontawesome'
+
+    outputs.dir 'theme/fonts/vendor/fontawesome'
+    outputs.dir 'theme/sass/vendor/fontawesome'
+
+    doLast {
+        copy {
+            from "${bowerComponentsDir}/fontawesome/fonts"
+            into 'theme/fonts/vendor/fontawesome'
+        }
+        copy {
+            from "${bowerComponentsDir}/fontawesome/scss"
+            into 'theme/sass/vendor/fontawesome'
+            rename 'font-awesome.scss', '_fontawesome.scss'
+        }
+    }
+}
+
+generate.dependsOn copyBootstrap, copyFontawesome
+preview.dependsOn copyBootstrap, copyFontawesome
+
